[package]
authors = ["Kjetil Kjeka <kjetilkjeka@gmail.com>"]
name = "uavcan-socketcan"
version = "0.0.0"

description = "Port of uavcan crate to socketcan"
repository = "https://github.com/kjetilkjeka/uavcan-socketcan.rs"

keywords = ["uavcan", "can", "socketcan"]
categories = ["hardware-support", "network-programming"]

license = "Apache-2.0/MIT"

[dependencies]
socketcan = "1.7.0"
uavcan = {path = "../uavcan/uavcan"}
