[package]
authors = ["Kjetil Kjeka <kjetilkjeka@gmail.com>"]
name = "uavcan-socketcan"
version = "0.0.0"

description = "Port of uavcan crate to socketcan"
repository = "https://github.com/kjetilkjeka/uavcan-socketcan.rs"

keywords = ["uavcan", "can", "socketcan"]
categories = ["hardware-support", "network-programming"]

license = "Apache-2.0/MIT"

[dependencies]
socketcan = "1.7.0"
uavcan = {git = "https://github.com/UAVCAN/uavcan.rs.git", rev = "ce2c1f65a4f8f2ac15677b73af22f38c4d7c1481"}

[dev-dependencies]
dsdl = {git = "https://github.com/UAVCAN/uavcan.rs.git", rev = "ce2c1f65a4f8f2ac15677b73af22f38c4d7c1481"}
